--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="days">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3&nbsp;days&nbsp;left</div>
         <hr>
         <div class="ava"></div>
-        <div class="teva">Creation of <strong>Jules Wyvern</strong></div>
+        <div class="teva">Creation of <span>Jules Wyvern</span></div>
     </nav>   
 </body>
 </html>
